Configure for custom domain gasyofriends.com

--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://anjaleenpatel.github.io/gasyofriends-website"
+  "homepage": "https://gasyofriends.com"
 }
